--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 *.tar*
 bootfs
 rootfs
+build
 
 # Linux images
 zImage
@@ -22,6 +23,6 @@ BOOT.bin
 
 # Other files
 linux-xlnx/
-mbrfs
-mbrfs.c
+mbrfs/
 rootfs/
+fakeroot.env
